# staking_app

./: Anchor.toml  package-lock.json  package.json
app/staking_app/: package-lock.json  package.json
app/staking_app/components/: Connected.tsx  MainLayout.tsx  NavBar.tsx  NftCard.tsx  NotConnected.tsx  WorkspaceProvider.tsx
app/staking_app/pages/: _app.tsx  index.tsx  newMint.tsx  stake.tsx
app/staking_app/token/candymachine/: cache.json  config.json
app/staking_app/token/token2/assets/: collection.json
app/staking_app/utils/: staking_app.json  staking_app.ts
programs/staking_app/: Cargo.toml
programs/staking_app/src/: lib.rs
tests/: staking_app.ts
tests/utils/: setUpNft.ts
